--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 <span class="qualification__line"></span>
               </div>
               <div>
-                <h3 class="qualification__title">Class 12th</h3>
+                <h3 class="qualification__title">Higher Secondary School</h3>
                 <span class="qualification__subtitle">Trident <br>Public School</span>
                 <div class="qualification__calender">
                   <i class="uil uil-calendar-alt"></i>
